# CDataStructures

./: .gitignore  CMakeLists.txt
src/: queue.c  queue.h  simplevector.c  simplevector.h  vector.c  vector.h
tests/: CMakeLists.txt  main.c  main.cpp  queue_unitest.h  vector_unittest.h
